--- a/index.html
+++ b/index.html
@@ -260,6 +260,139 @@
     </div>
   </div>
 
+  <!-- HTML Tables Section -->
+  <div class="max-w-6xl mx-auto px-4 mt-16">
+    <div class="text-center mb-12 fade-in-up">
+      <h2 class="text-4xl font-bold text-white mb-4 float-animation">
+        📊 Tablas HTML
+      </h2>
+      <p class="text-xl text-blue-100 max-w-2xl mx-auto px-4">
+        Domina el arte de organizar y presentar datos con tablas profesionales
+      </p>
+    </div>
+
+    <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-6">
+      
+      <!-- ¿Qué son las Tablas? -->
+      <div class="bg-white rounded-xl shadow-xl overflow-hidden hover:shadow-2xl transition-all duration-300 transform hover:scale-105 fade-in-up" style="animation-delay: 0.1s">
+        <div class="bg-gradient-to-r from-violet-500 to-purple-600 p-4 text-white">
+          <h3 class="text-xl font-bold">📊 ¿Qué son las Tablas?</h3>
+        </div>
+        <div class="p-6">
+          <p class="text-gray-600 mb-4">Concepto, historia y cuándo usar tablas HTML</p>
+          <a href="html/tablas/que-son-tablas.html" class="inline-block bg-violet-500 text-white px-4 py-2 rounded-lg hover:bg-violet-600 transition-colors">
+            Descubrir →
+          </a>
+        </div>
+      </div>
+
+      <!-- Estructura Básica -->
+      <div class="bg-white rounded-xl shadow-xl overflow-hidden hover:shadow-2xl transition-all duration-300 transform hover:scale-105 fade-in-up" style="animation-delay: 0.2s">
+        <div class="bg-gradient-to-r from-blue-500 to-blue-600 p-4 text-white">
+          <h3 class="text-xl font-bold">🏗️ Estructura Básica</h3>
+        </div>
+        <div class="p-6">
+          <p class="text-gray-600 mb-4">Anatomía de una tabla: table, tr, td</p>
+          <a href="html/tablas/estructura-basica-tablas.html" class="inline-block bg-blue-500 text-white px-4 py-2 rounded-lg hover:bg-blue-600 transition-colors">
+            Construir →
+          </a>
+        </div>
+      </div>
+
+      <!-- Etiquetas Principales -->
+      <div class="bg-white rounded-xl shadow-xl overflow-hidden hover:shadow-2xl transition-all duration-300 transform hover:scale-105 fade-in-up" style="animation-delay: 0.3s">
+        <div class="bg-gradient-to-r from-purple-500 to-purple-600 p-4 text-white">
+          <h3 class="text-xl font-bold">🏷️ Etiquetas Principales</h3>
+        </div>
+        <div class="p-6">
+          <p class="text-gray-600 mb-4">Conoce table, tr, td, th y sus atributos</p>
+          <a href="html/tablas/etiquetas-principales.html" class="inline-block bg-purple-500 text-white px-4 py-2 rounded-lg hover:bg-purple-600 transition-colors">
+            Dominar →
+          </a>
+        </div>
+      </div>
+
+      <!-- Encabezados y Celdas -->
+      <div class="bg-white rounded-xl shadow-xl overflow-hidden hover:shadow-2xl transition-all duration-300 transform hover:scale-105 fade-in-up" style="animation-delay: 0.4s">
+        <div class="bg-gradient-to-r from-orange-500 to-red-500 p-4 text-white">
+          <h3 class="text-xl font-bold">🎯 Encabezados y Celdas</h3>
+        </div>
+        <div class="p-6">
+          <p class="text-gray-600 mb-4">Diferencias entre th y td, scope y accesibilidad</p>
+          <a href="html/tablas/encabezados-celdas.html" class="inline-block bg-orange-500 text-white px-4 py-2 rounded-lg hover:bg-red-500 transition-colors">
+            Distinguir →
+          </a>
+        </div>
+      </div>
+
+      <!-- Estructura Avanzada -->
+      <div class="bg-white rounded-xl shadow-xl overflow-hidden hover:shadow-2xl transition-all duration-300 transform hover:scale-105 fade-in-up" style="animation-delay: 0.5s">
+        <div class="bg-gradient-to-r from-cyan-500 to-blue-600 p-4 text-white">
+          <h3 class="text-xl font-bold">🏗️ Estructura Avanzada</h3>
+        </div>
+        <div class="p-6">
+          <p class="text-gray-600 mb-4">thead, tbody, tfoot para tablas profesionales</p>
+          <a href="html/tablas/estructura-avanzada.html" class="inline-block bg-cyan-500 text-white px-4 py-2 rounded-lg hover:bg-blue-600 transition-colors">
+            Avanzar →
+          </a>
+        </div>
+      </div>
+
+      <!-- Colspan y Rowspan -->
+      <div class="bg-white rounded-xl shadow-xl overflow-hidden hover:shadow-2xl transition-all duration-300 transform hover:scale-105 fade-in-up" style="animation-delay: 0.6s">
+        <div class="bg-gradient-to-r from-green-500 to-teal-500 p-4 text-white">
+          <h3 class="text-xl font-bold">🔗 Colspan y Rowspan</h3>
+        </div>
+        <div class="p-6">
+          <p class="text-gray-600 mb-4">Combinar celdas horizontal y verticalmente</p>
+          <a href="html/tablas/colspan-rowspan.html" class="inline-block bg-green-500 text-white px-4 py-2 rounded-lg hover:bg-teal-500 transition-colors">
+            Combinar →
+          </a>
+        </div>
+      </div>
+
+      <!-- Estilos CSS -->
+      <div class="bg-white rounded-xl shadow-xl overflow-hidden hover:shadow-2xl transition-all duration-300 transform hover:scale-105 fade-in-up" style="animation-delay: 0.7s">
+        <div class="bg-gradient-to-r from-indigo-500 to-purple-500 p-4 text-white">
+          <h3 class="text-xl font-bold">🎨 Estilos CSS</h3>
+        </div>
+        <div class="p-6">
+          <p class="text-gray-600 mb-4">Diseño profesional con bordes, colores y efectos</p>
+          <a href="html/tablas/estilos-css.html" class="inline-block bg-indigo-500 text-white px-4 py-2 rounded-lg hover:bg-purple-500 transition-colors">
+            Estilizar →
+          </a>
+        </div>
+      </div>
+
+      <!-- Tablas Responsivas -->
+      <div class="bg-white rounded-xl shadow-xl overflow-hidden hover:shadow-2xl transition-all duration-300 transform hover:scale-105 fade-in-up" style="animation-delay: 0.8s">
+        <div class="bg-gradient-to-r from-pink-500 to-rose-500 p-4 text-white">
+          <h3 class="text-xl font-bold">📱 Tablas Responsivas</h3>
+        </div>
+        <div class="p-6">
+          <p class="text-gray-600 mb-4">Adaptación perfecta a dispositivos móviles</p>
+          <a href="html/tablas/tablas-responsivas.html" class="inline-block bg-pink-500 text-white px-4 py-2 rounded-lg hover:bg-rose-500 transition-colors">
+            Adaptar →
+          </a>
+        </div>
+      </div>
+
+      <!-- Ejercicios Prácticos -->
+      <div class="bg-white rounded-xl shadow-xl overflow-hidden hover:shadow-2xl transition-all duration-300 transform hover:scale-105 fade-in-up" style="animation-delay: 0.9s">
+        <div class="bg-gradient-to-r from-emerald-500 to-green-600 p-4 text-white">
+          <h3 class="text-xl font-bold">🎯 Ejercicios Prácticos</h3>
+        </div>
+        <div class="p-6">
+          <p class="text-gray-600 mb-4">Desafíos reales para dominar las tablas</p>
+          <a href="html/tablas/ejercicios-practicos.html" class="inline-block bg-emerald-500 text-white px-4 py-2 rounded-lg hover:bg-green-600 transition-colors">
+            Practicar →
+          </a>
+        </div>
+      </div>
+
+    </div>
+  </div>
+
   <!-- CSS Frameworks Section -->
   <div class="max-w-6xl mx-auto px-4 mt-16">
     <div class="text-center mb-12 fade-in-up">
