--- a/html/tablas/estructura-basica-tablas.html
+++ b/html/tablas/estructura-basica-tablas.html
@@ -7,6 +7,7 @@
   <title>Estructura Básica de Tablas HTML</title>
   <link rel="shortcut icon" href="../../images/school.png" type="image/x-icon">
   <script src="https://cdn.tailwindcss.com"></script>
+  <script src="../../js/scripts.js"></script>
   <style>
     body {
       background: linear-gradient(135deg, #74b9ff 0%, #0984e3 100%);
@@ -32,8 +33,15 @@
     }
 
     @keyframes slideIn {
-      from { transform: translateX(-100%); opacity: 0; }
-      to { transform: translateX(0); opacity: 1; }
+      from {
+        transform: translateX(-100%);
+        opacity: 0;
+      }
+
+      to {
+        transform: translateX(0);
+        opacity: 1;
+      }
     }
 
     .slide-in {
@@ -55,7 +63,8 @@
 
   <!-- Navigation -->
   <nav class="mb-8">
-    <div class="max-w-6xl mx-auto px-4 flex flex-col sm:flex-row justify-between items-stretch sm:items-center gap-3 sm:gap-0">
+    <div
+      class="max-w-6xl mx-auto px-4 flex flex-col sm:flex-row justify-between items-stretch sm:items-center gap-3 sm:gap-0">
       <a href="que-son-tablas.html"
         class="bg-white text-blue-600 px-4 py-2 rounded-lg hover:bg-blue-50 transition-colors text-center w-full sm:w-auto">
         ← ¿Qué son las Tablas?
@@ -151,34 +160,40 @@
 
     <!-- Código de Ejemplo -->
     <div class="bg-white rounded-xl shadow-xl overflow-hidden mb-8">
-      <div class="bg-gradient-to-r from-gray-800 to-gray-900 p-6 text-white">
+      <div class="bg-gradient-to-r from-blue-800 to-blue-900 p-6 text-white">
         <h2 class="text-3xl font-bold">💻 Tu Primera Tabla</h2>
       </div>
       <div class="p-8">
         <div class="grid lg:grid-cols-2 gap-8">
           <div>
             <h3 class="text-xl font-bold text-gray-800 mb-4">📝 Código HTML</h3>
-            <div class="code-editor rounded-lg p-4">
-              <div class="text-green-400 mb-2">// Estructura básica de una tabla</div>
-              <div class="space-y-1 text-sm">
-                <div><span class="text-red-400">&lt;table&gt;</span></div>
-                <div class="ml-4"><span class="text-red-400">&lt;tr&gt;</span></div>
-                <div class="ml-8"><span class="text-blue-400">&lt;th&gt;</span>Producto<span class="text-blue-400">&lt;/th&gt;</span></div>
-                <div class="ml-8"><span class="text-blue-400">&lt;th&gt;</span>Precio<span class="text-blue-400">&lt;/th&gt;</span></div>
-                <div class="ml-8"><span class="text-blue-400">&lt;th&gt;</span>Stock<span class="text-blue-400">&lt;/th&gt;</span></div>
-                <div class="ml-4"><span class="text-red-400">&lt;/tr&gt;</span></div>
-                <div class="ml-4"><span class="text-red-400">&lt;tr&gt;</span></div>
-                <div class="ml-8"><span class="text-yellow-400">&lt;td&gt;</span>Laptop<span class="text-yellow-400">&lt;/td&gt;</span></div>
-                <div class="ml-8"><span class="text-yellow-400">&lt;td&gt;</span>$800<span class="text-yellow-400">&lt;/td&gt;</span></div>
-                <div class="ml-8"><span class="text-yellow-400">&lt;td&gt;</span>15<span class="text-yellow-400">&lt;/td&gt;</span></div>
-                <div class="ml-4"><span class="text-red-400">&lt;/tr&gt;</span></div>
-                <div class="ml-4"><span class="text-red-400">&lt;tr&gt;</span></div>
-                <div class="ml-8"><span class="text-yellow-400">&lt;td&gt;</span>Mouse<span class="text-yellow-400">&lt;/td&gt;</span></div>
-                <div class="ml-8"><span class="text-yellow-400">&lt;td&gt;</span>$25<span class="text-yellow-400">&lt;/td&gt;</span></div>
-                <div class="ml-8"><span class="text-yellow-400">&lt;td&gt;</span>50<span class="text-yellow-400">&lt;/td&gt;</span></div>
-                <div class="ml-4"><span class="text-red-400">&lt;/tr&gt;</span></div>
-                <div><span class="text-red-400">&lt;/table&gt;</span></div>
+            <div class="overflow-x-auto">
+              <div class="bg-gray-800 px-4 py-2 text-gray-300 text-sm flex justify-between items-center">
+                <span>📄 index.html</span>
+                <button type="button" onclick="copyCode('firstTable')"
+                  class=" copy-btn bg-blue-600 text-white px-3 py-1 mt-1 rounded text-xs hover:bg-blue-700 transition-colors">
+                  📋 Copiar
+                </button>
               </div>
+              <pre id="firstTable" class="bg-gray-900 text-white p-1 rounded-b overflow-x-auto text-xs">
+<span class="text-[#f92672]">&lt;table&gt;</span>
+  <span class="text-[#f92672]">&lt;tr&gt;</span>
+    <span class="text-[#f92672]">&lt;th&gt;</span><span>Producto</span><span class="text-[#f92672]">&lt;/th&gt;</span>
+    <span class="text-[#f92672]">&lt;th&gt;</span><span>Precio</span><span class="text-[#f92672]">&lt;/th&gt;</span>
+    <span class="text-[#f92672]">&lt;th&gt;</span><span>Stock</span><span class="text-[#f92672]">&lt;/th&gt;</span>
+  <span class="text-[#f92672]">&lt;/tr&gt;</span>
+  <span class="text-[#f92672]">&lt;tr&gt;</span>
+    <span class="text-[#f92672]">&lt;td&gt;</span><span>Laptop</span><span class="text-[#f92672]">&lt;/td&gt;</span>
+    <span class="text-[#f92672]">&lt;td&gt;</span><span>$800</span><span class="text-[#f92672]">&lt;/td&gt;</span>
+    <span class="text-[#f92672]">&lt;td&gt;</span><span>15</span><span class="text-[#f92672]">&lt;/td&gt;</span>
+  <span class="text-[#f92672]">&lt;/tr&gt;</span>
+  <span class="text-[#f92672]">&lt;tr&gt;</span>
+    <span class="text-[#f92672]">&lt;td&gt;</span><span>Mouse</span><span class="text-[#f92672]">&lt;/td&gt;</span>
+    <span class="text-[#f92672]">&lt;td&gt;</span><span>$25</span><span class="text-[#f92672]">&lt;/td&gt;</span>
+    <span class="text-[#f92672]">&lt;td&gt;</span><span>50</span><span class="text-[#f92672]">&lt;/td&gt;</span>
+  <span class="text-[#f92672]">&lt;/tr&gt;</span>
+<span class="text-[#f92672]">&lt;/table&gt;</span>
+</pre>
             </div>
           </div>
           <div>
@@ -257,7 +272,8 @@
               </div>
               <div class="bg-red-50 p-4 rounded-lg border-l-4 border-red-400">
                 <h4 class="font-bold mb-2 text-red-700">🚫 Etiquetas sin Cerrar</h4>
-                <p class="text-xs text-gray-700">Siempre cerrar todas las etiquetas: &lt;tr&gt;, &lt;td&gt;, &lt;th&gt;</p>
+                <p class="text-xs text-gray-700">Siempre cerrar todas las etiquetas: &lt;tr&gt;, &lt;td&gt;, &lt;th&gt;
+                </p>
               </div>
             </div>
           </div>
@@ -270,8 +286,7 @@
       <div class="bg-gradient-to-r from-green-600 to-teal-700 p-6 text-white">
         <h2 class="text-3xl font-bold">🎯 Ejercicio Práctico</h2>
       </div>
-      <div class="p-8">
-        <div class="mb-6">
+        <div class="mb-6 p-6">
           <h3 class="text-2xl font-bold text-gray-800 mb-4">📚 Crea tu Tabla de Estudiantes</h3>
           <p class="text-gray-700 mb-4">
             Intenta crear una tabla que muestre información de estudiantes con las siguientes columnas:
@@ -286,27 +301,32 @@
           </div>
         </div>
 
-        <div class="grid lg:grid-cols-2 gap-8">
-          <div>
+        <div class="grid md:grid-cols-2 gap-4">
+          <div class="overflow-x-auto px-6 py-1">
             <h4 class="text-lg font-bold text-gray-800 mb-3">💡 Pista de Código</h4>
-            <div class="code-editor rounded-lg p-4">
-              <div class="text-green-400 mb-2">// Estructura sugerida</div>
-              <div class="space-y-1 text-sm">
-                <div><span class="text-red-400">&lt;table&gt;</span></div>
-                <div class="ml-4"><span class="text-red-400">&lt;tr&gt;</span></div>
-                <div class="ml-8"><span class="text-blue-400">&lt;th&gt;</span>Nombre<span class="text-blue-400">&lt;/th&gt;</span></div>
-                <div class="ml-8"><span class="text-blue-400">&lt;th&gt;</span>Carrera<span class="text-blue-400">&lt;/th&gt;</span></div>
-                <div class="ml-8"><span class="text-gray-500">// Completa las demás columnas...</span></div>
-                <div class="ml-4"><span class="text-red-400">&lt;/tr&gt;</span></div>
-                <div class="ml-4"><span class="text-gray-500">// Agrega filas de datos aquí...</span></div>
-                <div><span class="text-red-400">&lt;/table&gt;</span></div>
-              </div>
+            <div class="bg-gray-800 px-4 py-2 text-gray-300 text-sm flex justify-between items-center">
+              <span>📄 index.html</span>
+              <button type="button" onclick="copyCode('practiceCode')"
+                class=" copy-btn bg-blue-600 text-white px-3 py-1 mt-1 rounded text-xs hover:bg-blue-700 transition-colors">
+                📋 Copiar
+              </button>
             </div>
+            <pre id="practiceCode"
+              class="bg-gray-900 text-white p-1 rounded-b font-mono whitespace-pre overflow-x-auto text-xs">
+<span class="text-[#f92672]">&lt;table&gt;</span>
+  <span class="text-[#f92672]">&lt;tr&gt;</span>
+    <span class="text-[#f92672]">&lt;th&gt;</span>Nombre<span class="text-[#f92672]">&lt;/th&gt;</span>
+    <span class="text-[#f92672]">&lt;th&gt;</span>Carrera<span class="text-[#f92672]">&lt;/th&gt;</span>
+    <span class="text-[#75715e]">// Completa las demás columnas...</span>
+  <span class="text-[#f92672]">&lt;/tr&gt;</span>
+  <span class="text-[#75715e]">// Agrega filas de datos aquí...</span>
+<span class="text-[#f92672]">&lt;/table&gt;</span>
+</pre>
           </div>
-          <div>
-            <h4 class="text-lg font-bold text-gray-800 mb-3">🎯 Resultado Esperado</h4>
+          <div class="overflow-x-auto py-1">
+            <h4 class="text-lg font-bold text-gray-800 mb-3 mx-6">🎯 Resultado Esperado</h4>
             <div class="bg-gray-50 p-4 rounded-lg">
-              <table class="w-full border-collapse border border-gray-400 text-sm">
+              <table class="overflow-x-auto border-collapse border border-gray-400 text-sm">
                 <tr class="bg-green-100">
                   <th class="border border-gray-400 p-2 font-bold">Nombre</th>
                   <th class="border border-gray-400 p-2 font-bold">Carrera</th>
@@ -329,7 +349,7 @@
             </div>
           </div>
         </div>
-      </div>
+      
     </div>
 
     <!-- Resumen -->
@@ -367,7 +387,7 @@
       <div class="bg-white rounded-xl shadow-xl p-6">
         <div class="flex flex-col gap-3 sm:flex-row sm:justify-between sm:items-center">
           <a href="que-son-tablas.html"
-            class="bg-lime-500 text-white px-6 py-3 rounded-lg hover:bg-lime-600 transition-colors flex items-center justify-center w-full sm:w-auto text-center">
+            class="bg-blue-500 text-white px-6 py-3 rounded-lg hover:bg-blue-600 transition-colors flex items-center justify-center w-full sm:w-auto text-center">
             ← ¿Qué son las Tablas HTML?
           </a>
 
@@ -377,7 +397,7 @@
           </a>
 
           <a href="etiquetas-principales.html"
-            class="bg-lime-500 text-white px-6 py-3 rounded-lg hover:bg-lime-600 transition-colors flex items-center justify-center w-full sm:w-auto text-center">
+            class="bg-blue-500 text-white px-6 py-3 rounded-lg hover:bg-blue-600 transition-colors flex items-center justify-center w-full sm:w-auto text-center">
             Etiquetas Principales →
           </a>
         </div>
@@ -395,4 +415,5 @@
   </footer>
 
 </body>
+
 </html>
